recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:1: error: type mismatch;
 found   : Unit
 required: Int
def occurences(l:List[Int], v:Int): Int = {
                                          ^