recursion.cons.lessons.recursion.cons.Occurrence.scala.code
def occurences(l:List[Int], v:Int): Int = {




}
